В getYandexPickupPoints добавил выбор payment_method по активным доступным способам оплаты: если есть хотя бы один isOnline = true, в Яндекс уходит already_paid, иначе card_on_receipt. Логика в src/main/kotlin/   ru/foodbox/delivery/modules/delivery/application/DeliveryServiceImpl.kt:12, параметр прокинут через src/main/kotlin/ru/foodbox/delivery/modules/delivery/application/YandexDeliveryGateway.kt:6 и добавлен в тело   запроса pickup-points/list в src/main/kotlin/ru/foodbox/delivery/modules/delivery/infrastructure/yandex/YandexDeliveryApiClient.kt:60 и src/main/kotlin/ru/foodbox/delivery/modules/delivery/infrastructure/yandex/   YandexDeliveryApiClient.kt:220. Публичный контракт getYandexPickupPoints не менял.
  Добавил тесты на оба сценария в src/test/kotlin/ru/foodbox/delivery/modules/delivery/application/DeliveryServiceImplTest.kt:19. Проверка прошла: ./gradlew test --tests
  'ru.foodbox.delivery.modules.delivery.application.DeliveryServiceImplTest' --tests 'ru.foodbox.delivery.modules.delivery.application.YandexPickupPointDeliveryCostCalculatorTest'.
